# recipe_calculator_server

./: .gitignore  Cargo.toml  build-release-binaries.py  init-test-env.py  log4rs-default-config.yaml
migrations/2017-09-18-053447_create_app_user/: down.sql  up.sql
migrations/2017-11-05-170510_create_vk_user_and_device/: down.sql  up.sql
migrations/2017-11-12-102257_create_foodstuff_table/: down.sql  up.sql
migrations/2018-06-09-161554_remove_floats_from_foodstuff/: down.sql  up.sql
migrations/2019-11-24-080936_grant_server_user_permissions_for_diesel_tables/: down.sql  up.sql
migrations/2019-12-06-203255_add_app_user_name/: down.sql  up.sql
migrations/2019-12-08-102214_convert_vk_uid_to_string/: down.sql  up.sql
migrations/2019-12-15-095127_add_client_token_to_app_user/: down.sql  up.sql
migrations/2019-12-18-063606_add_gp_user/: down.sql  up.sql
migrations/2019-12-23-080530_add_pairing_code_range/: down.sql  up.sql
migrations/2019-12-25-054815_add_taken_pairing_code/: down.sql  up.sql
migrations/2020-01-23-200407_add_fcm_token/: down.sql  up.sql
migrations/2020-01-27-181045_paired_partners/: down.sql  up.sql
migrations/2020-02-17-190049_allow_client_update_app_user/: down.sql  up.sql
src/: app_user.rs  app_user_test.rs  command_line_args.rs  command_line_args_test.rs  config.rs  config_test.rs  error.rs  http_client.rs  lib.rs  main.rs  schema.rs  testing_config.rs  testing_config.rs.inc  testing_utils.rs  vk.rs  vk_test.rs
src/db/: app_user.rs  app_user_test.rs  connection.rs  connection_test.rs  device.rs  device_test.rs  diesel_macro.rs  diesel_macro_test.rs  diesel_test.rs  error.rs  foodstuff.rs  foodstuff_test.rs  mod.rs  psql_admin_url.rs.inc  testing_util.rs.inc  vk_user.rs  vk_user_test.rs
src/logs/: logs_error.rs  logs_test.rs  mod.rs
src/outside/: error.rs  fcm.rs  fcm_test.rs  gp.rs  gp_test.rs  http_client.rs  mod.rs  vk.rs  vk_test.rs
src/pairing/: error.rs  mod.rs  pairing_code_creator.rs  pairing_code_creator_test.rs  pairing_code_creator_test_send.rs  pairing_code_creator_test_send.stderr  pairing_code_creator_test_sync.rs  pairing_code_creator_test_sync.stderr
src/server/: client_cmd.rs  client_cmd_test.rs  constants.rs  entry_point.rs  entry_point_test.rs  error.rs  (+9 more)
tests/: app_user_test.rs  command_line_test.rs  config_test.rs  testing_config.rs  vk_test.rs
(+75 files in other folders)
