[package]
name = "recipe_calculator_server"
version = "0.1.0"
authors = ["blazern <blazer007@yandex.ru>"]

[lib]
name = "recipe_calculator_lib"
path = "src/lib.rs"

[[bin]]
name = "recipe_calculator_bin"
path = "src/main.rs"

[dependencies]
# error handling
error-chain = "0.11.0"

# command line args
clap = "2.31.2"

# json
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# testing
time = "0.1"

# HTTP client
reqwest = "0.7.3"
url = "1.5.1"

# HTTP server
futures = "0.1.14"
hyper = "0.11.2"

# diesel
dotenv = "0.10.*"
diesel = { version = "0.16.0", features = ["postgres", "uuid"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }

# uuid
uuid = { version = "0.4", features = ["serde", "v4"] }

# util
lazy_static = "1.0"