[package]
name = "recipe_calculator_server"
version = "0.1.0"
authors = ["blazern <blazer007@yandex.ru>"]

[lib]
name = "recipe_calculator_lib"
path = "src/lib.rs"

[[bin]]
name = "recipe_calculator_bin"
path = "src/main.rs"

[dependencies]
# error handling
error-chain = "0.11.0"

# command line args
clap = "2.31.2"

# json
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.38"

# testing
time = "0.1"

# HTTP
futures = "0.1.25"
hyper = "0.12.23"
hyper-tls = "0.3.1"
tokio-core = "0.1.17"

# diesel
diesel = { version = "1.4.1", features = ["postgres", "uuid"] }

# uuid
uuid = { version = "0.5.1", features = ["serde", "v4"] }

# util
lazy_static = "1.0"