[package]
name = "recipe_calculator_server"
version = "0.1.0"
authors = ["blazern <danil.garmanov@protonmail.com>"]
edition = "2018"

[lib]
name = "recipe_calculator_lib"
path = "src/lib.rs"

[[bin]]
name = "recipe_calculator_bin"
path = "src/main.rs"

[dependencies]
# error handling
error-chain = "0.12.1"

# command line args
clap = "2.31.2"

# json
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.38"

# testing
time = "0.1"
trybuild = "1.0.19"

# HTTP
futures = "0.3"
hyper = "0.13.2"
hyper-tls = "0.4.1"
tokio = "0.2"
percent-encoding = "1.0.1"

# diesel
diesel = { version = "1.4.1", features = ["postgres", "uuidv07"] }
diesel_migrations = { version = "1.4.0" }

# uuid
uuid = { version = "0.7.4", features = ["serde", "v4"] }

# util
lazy_static = "1.0"
rand = "0.7.2"
